@@ -1,9 +1,16 @@
 package com.shanchain.shandata.mvp.view.activity.story;
 
+import android.Manifest;
 import android.animation.Animator;
 import android.animation.ObjectAnimator;
 import android.animation.PropertyValuesHolder;
+import android.content.Intent;
+import android.content.pm.PackageManager;
+import android.os.Build;
 import android.os.Handler;
+import android.support.annotation.NonNull;
+import android.support.v4.app.ActivityCompat;
+import android.support.v4.content.ContextCompat;
 import android.text.TextUtils;
 import android.view.View;
 import android.view.animation.AnticipateOvershootInterpolator;
@@ -24,6 +31,7 @@ import java.util.ArrayList;
 
 import butterknife.Bind;
 import butterknife.OnClick;
+import me.iwf.photopicker.PhotoPicker;
 
 
 public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLeftClickListener, ArthurToolBar.OnRightClickListener {
@@ -67,6 +75,7 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
     private boolean[] isSelected = {false, false, false, false, false, false, false, false, false};
     private String[] addTagNames = {"", ""};
     private ArrayList<Integer> addedText;
+    private String photoImg;
 
     @Override
     protected int getContentViewLayoutID() {
@@ -185,7 +194,7 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
 
     @Override
     public void onRightClick(View v) {
-        readyGo(ParticipantsInfoActivity.class);
+        readyGo(ProtagonistActivity.class);
     }
 
 
@@ -193,7 +202,6 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
     public void onClick(View view) {
         switch (view.getId()) {
             case R.id.tv_creation_tag1:
-                ToastUtils.showToast(this, mTvCreationTag1.getText().toString());
                 setTextColor(0);
                 break;
             case R.id.tv_creation_tag2:
@@ -224,8 +232,62 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
                 addTag();
                 break;
             case R.id.iv_creation_title:
-
+                //选择图片
+                selectImages();
                 break;
+        }
+    }
+
+    private void selectImages() {
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) {
+            //6.0权限申请
+            LogUtils.d("版本6.0");
+            int checkSelfPermission = ContextCompat.checkSelfPermission(this, Manifest.permission.CAMERA);
+            if (checkSelfPermission != PackageManager.PERMISSION_GRANTED) {
+                LogUtils.d("未申请权限,正在申请");
+                ActivityCompat.requestPermissions(this, new String[]{Manifest.permission.CAMERA}, 100);
+            } else {
+                LogUtils.d("已经申请权限");
+                pickImages();
+            }
+        } else {
+            LogUtils.d("版本低于6.0");
+            pickImages();
+        }
+    }
+
+    private void pickImages() {
+        PhotoPicker.builder()
+                .setPhotoCount(1)
+                .setShowCamera(true)
+                .setShowGif(true)
+                .setPreviewEnabled(false)
+                .start(this, PhotoPicker.REQUEST_CODE);
+    }
+
+    @Override
+    public void onRequestPermissionsResult(int requestCode, @NonNull String[] permissions, @NonNull int[] grantResults) {
+        super.onRequestPermissionsResult(requestCode, permissions, grantResults);
+        if (requestCode == 100) {
+            if (grantResults[0] == PackageManager.PERMISSION_GRANTED) {
+                //授权了
+                pickImages();
+            } else {
+                ToastUtils.showToast(this, "未授权");
+            }
+        }
+    }
+
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, Intent data) {
+        super.onActivityResult(requestCode, resultCode, data);
+        if (resultCode == RESULT_OK && requestCode == PhotoPicker.REQUEST_CODE) {
+            if (data != null) {
+                ArrayList<String> photos =
+                        data.getStringArrayListExtra(PhotoPicker.KEY_SELECTED_PHOTOS);
+                photoImg = photos.get(0);
+                Glide.with(this).load(photoImg).transform(new GlideCircleTransform(this)).into(mIvCreationTitle);
+            }
         }
     }
 
@@ -245,7 +307,7 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
         }
 
         if (!isSelected[i] && addedText.contains(i)) {
-            addedText.remove(new Integer(i));
+            addedText.remove(Integer.valueOf(i));
         }
 
         mTvCreationTag1.setTextColor(isSelected[0] ?
@@ -275,6 +337,7 @@ public class CreationActivity extends BaseActivity implements ArthurToolBar.OnLe
             ToastUtils.showToast(this, "自定义的标签名不能为空");
             return;
         }
+
 
         if (addTagNames[0].equals("")) {
             addTagNames[0] = tagName;
